Changelog
=========


2.0.4 - Unreleased
------------------

- Let the portlets import step depend on the content import step
  again.  Refs http://dev.plone.org/plone/ticket/8350
  [maurits]

- Add test ``testINavigationRootWithRelativeRootSet``.
  Cfr. https://dev.plone.org/plone/ticket/8787
  [anthonygerrard, WouterVH]

- Fix cicular dependency in import steps.
  This partially fixes http://dev.plone.org/plone/ticket/8350
  [kiorky] 


2.0.3 - 2011-04-01
------------------

- Enable managing portlets of default pages.
  This fixes http://dev.plone.org/plone/ticket/10672
  [fRiSi]

2.0.2 - 2010-12-23
------------------

- Recover from parse error on ``updated`` date.
  [malthe]

- Display full creator name in review portlet.
  [thomasdesvenain]

- Do not display portlets add select list if it is empty.
  [thomasdesvenain]

- Recent items and Review list portlets title is got by a title attribute
  on the renderer.
  [thomasdesvenain]

- Fix the IPortletDirective schema's default edit_permission to match
  the default that is actually supplied by the directive's implementation.
  [davisagli]

- Fix RSS portlet edge case. The feedparser may not have a 'bozo' attribute
  if libxml2 is not present on the system.
  [stefan]

2.0.1 - 2010-09-09
------------------

- Proper checkup for navigation portlet's title - we don't show it
  unless the title is explicitly specified.
  [spliter]

2.0 - 2010-07-18
----------------

- Update license to GPL version 2 only.
  [hannosch]

2.0b11 - 2010-06-13
-------------------

- Stop abusing traditional layers to do database changes.
  [hannosch]

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Avoid using the deprecated five:implements directive.
  [hannosch]

- Updated to use five.formlib.
  [hannosch]

2.0b10 - 2010-06-03
-------------------

- Fixed an issue with the portlet calendar cache not being invalidated
  when adding a new event in the last day of the month. This closes